# exaflow-exags-upc

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  exags.pc.in  regen.sh
m4/: ax_upc_compiler.m4
src/: Makefile.am  Makefile.in  amg.upc  comm.h  comm.upc  crs.h  crystal.h  crystal.upc  fcrs.upc  fcrystal.upc  findpts.c  findpts_imp.h  gs.h  gs.upc  xxt.upc
tests/: Makefile.am  Makefile.in
tests/comm/: Makefile.am  Makefile.in  comm_test.upc
tests/crystal/: Makefile.am  crystal_test.upc
tests/gs/: Makefile.am  gs_test.upc
tests/xxt/: Makefile.am  xxt_test.upc
