nobase_pkginclude_HEADERS = c99.h crystal.h gs_defs.h gs_local.h name.h sarray_transfer.h\
	sort_imp.h types.h comm.h fail.h gs.h mem.h sarray_sort.h sort.h tensor.h

EXTRA_DIST = c99.h crystal.h gs_defs.h gs_local.h name.h sarray_transfer.h\
	sort_imp.h types.h comm.h fail.h gs.h mem.h sarray_sort.h sort.h tensor.h

lib_LIBRARIES = libexags.a
libexags_a_SOURCES = sort.upc fail.upc comm.upc tensor.upc gs_local.upc\
	sarray_sort.upc crystal.upc sarray_transfer.upc gs.upc