nobase_pkginclude_HEADERS = c99.h crystal.h gs_defs.h gs_local.h name.h sarray_transfer.h\
	sort_imp.h types.h comm.h fail.h gs.h mem.h sarray_sort.h sort.h tensor.h crs.h\
	findpts_el.h findpts_imp.h findpts_local.h findpts_local_imp.h lob_bnd.h obbox.h\
	poly.h poly_imp.h sparse_cholesky.h

EXTRA_DIST = c99.h crystal.h gs_defs.h gs_local.h name.h sarray_transfer.h\
	sort_imp.h types.h comm.h fail.h gs.h mem.h sarray_sort.h sort.h tensor.h crs.h\
	findpts_el.h findpts_imp.h findpts_local.h findpts_local_imp.h lob_bnd.h obbox.h\
	poly.h poly_imp.h sparse_cholesky.h

lib_LIBRARIES = libexags.a
libexags_a_SOURCES = sort.c fail.upc comm.upc tensor.c gs_local.c\
	sarray_sort.c crystal.upc sarray_transfer.upc gs.upc amg.upc sparse_cholesky.c\
	xxt.upc fcrs.upc fcrystal.upc findpts.upc findpts_el_2.c findpts_el_3.c\
	findpts_local.c lob_bnd.c obbox.c poly.c