SUBDIRS = comm crystal gs xxt
TESTS = comm/comm_test1\
	comm/comm_test2\
	comm/comm_test3\
	comm/comm_test4\
	comm/comm_test8\
	comm/comm_test12\
	comm/comm_test16\
	crystal/crystal_test1\
	crystal/crystal_test2\
	crystal/crystal_test4\
	crystal/crystal_test8\
	crystal/crystal_test16\
	gs/gs_test1\
	gs/gs_test2\
	gs/gs_test4\
	gs/gs_test8\
	gs/gs_test16\
	xxt/xxt_test1


