check_PROGRAMS = comm_test1 comm_test2 comm_test3 comm_test4 comm_test8 comm_test12 comm_test16
comm_test1_SOURCES = comm_test.upc
comm_test2_SOURCES = comm_test.upc
comm_test3_SOURCES = comm_test.upc
comm_test4_SOURCES = comm_test.upc
comm_test8_SOURCES = comm_test.upc
comm_test12_SOURCES = comm_test.upc
comm_test16_SOURCES = comm_test.upc
comm_test1_UPCFLAGS = -I@top_srcdir@/src/ @CHECK_CFLAGS@ -fupc-threads-1
comm_test2_UPCFLAGS = -I@top_srcdir@/src/ @CHECK_CFLAGS@ -fupc-threads-2
comm_test3_UPCFLAGS = -I@top_srcdir@/src/ @CHECK_CFLAGS@ -fupc-threads-3
comm_test4_UPCFLAGS = -I@top_srcdir@/src/ @CHECK_CFLAGS@ -fupc-threads-4
comm_test8_UPCFLAGS = -I@top_srcdir@/src/ @CHECK_CFLAGS@ -fupc-threads-8
comm_test12_UPCFLAGS = -I@top_srcdir@/src/ @CHECK_CFLAGS@ -fupc-threads-12
comm_test16_UPCFLAGS = -I@top_srcdir@/src/ @CHECK_CFLAGS@ -fupc-threads-16
LDADD = $(top_builddir)/src/libexags.a @CHECK_LIBS@

